# synthetic-consciousness

./: .gitignore  Cargo.toml  README.md  architecture.md  example_config_3d.toml  metrics.csv  simulation_report.html  simulation_report.txt  test_2d.toml  whitepaper.md
src/: attraction.rs  config.rs  dynamics.rs  entities.rs  essence.rs  geometry.rs  lib.rs  main.rs  memory.rs  metrics.rs  results.rs  simulation.rs  state.rs  visualization.rs
