[package]
name = "synthetic-consciousness"
version = "0.1.0"
edition = "2021"
authors = ["Ayomide I. Daniels <https://www.linkedin.com/in/ayomide-i-daniels-185a28177>"]
description = "Synthetic Consciousness via Atomic Geometry, Attraction, Statefulness, and Perpetual Velocity"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ndarray = "0.15"
rand = "0.8"
rayon = "1.7"
pdf-writer = "0.9"
chrono = "0.4"
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

[lib]
path = "src/lib.rs"

[[bin]]
name = "synthetic-consciousness"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
